--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
@@ -40,7 +40,7 @@
 % ---------------------------------------------------------------
 % Chapter 2 - O sistema elétrico brasileiro
 % ---------------------------------------------------------------
-\chapter{O sistema elétrico brasileiro}
+\chapter{O Sistema Elétrico Brasileiro}
 \label{cap2}
 \input{cap2}
 
